Refactor Sending GUI to use dialog for parcel name and description input, fix race condition when parcel would be sent and items would still remain in item storage